# motor_imagery_inefficient_users

./: .gitignore  CSP_logic.ipynb  README.md  config.yaml  csp_lda_train.py  eval_csp_lda.py  explore_data.ipynb  pyproject.toml  scratchpad.ipynb
intuition/: challenges_for_bcis.md  how_are_bcis_built.md  what_are_bcis.md
learn_CSP/: CSP_implementation_basics.ipynb
src/motor_imagery_inefficient_users/: __init__.py  extract_features.py  io.py  ml_utils.py  preprocess.py
understand_CSP/: CSP_implementation_basics.ipynb
understand_LDA/: LDA_implementation.ipynb
