[project]
name = "motor-imagery-inefficient-users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.14.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "mne>=1.12.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]

[tool.uv]
link-mode = "copy"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyzmq>=27.1.0",
]
